--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
